# deep_ros

./: .cpplint.cfg  .gitignore  .pre-commit-config.yaml  BUILD_FIXES.md  CLAUDE.md  DEVELOPING.md  DOCKER_SETUP.md  LICENSE  README.md  docker-compose.yml
.config/: clang-format  copyright.txt
deep_backend/: CMakeLists.txt  package.xml
deep_backend/include/deep_backend/: deep_backend_plugin.hpp  inference_manager.hpp  memory_allocator.hpp
deep_conversions/: CMakeLists.txt  README.md  package.xml
deep_conversions/include/: ros_conversions.hpp
deep_conversions/include/deep_conversions/: image_conversions.hpp  imu_conversions.hpp  laserscan_conversions.hpp  pointcloud_conversions.hpp  ros_conversions.hpp
deep_conversions/src/: image_conversions.cpp  imu_conversions.cpp  laserscan_conversions.cpp  pointcloud_conversions.cpp  ros_conversions.cpp
deep_conversions/test/: test_conversions.cpp  test_minimal_image.cpp  test_ros_conversions.cpp
deep_core/: CMakeLists.txt  DEVELOPING.md  README.md  package.xml
deep_core/include/deep_core/: deep_backend_plugin.hpp  deep_core.hpp  deep_node_base.hpp  plugin_interface.hpp
deep_core/src/: backend_inference_executor.cpp  backend_memory_allocator.cpp  deep_node_base.cpp  tensor.cpp
deep_core/test/: test_deep_core.cpp  test_dynamic_parameters.cpp  test_dynamic_reconfiguration.cpp  test_tensor.cpp
deep_core/test/mock_plugin/: mock_plugin.cpp  plugins.xml  test_plugin.cpp
deep_object_detection/: CMakeLists.txt  README.md  package.xml
deep_object_detection/config/: generic_model_params.yaml  object_detection.yaml  object_detection_config.yaml  object_detection_params.yaml
deep_object_detection/include/deep_object_detection/: backend_manager.hpp  deep_object_detection_node.hpp  detection_msg_alias.hpp  detection_types.hpp  generic_postprocessor.hpp  image_preprocessor.hpp  inference_interface.hpp  object_detection_node.hpp  onnx_inference.hpp  ort_backend_inference.hpp  postprocessor_factory.hpp  tensorrt_inference.hpp
deep_object_detection/launch/: deep_object_detection.launch.py  deep_object_detection.launch.yaml  multi_camera_detection.launch.py  object_detection.launch.py  simple_detection.launch.yaml
deep_object_detection/src/: backend_manager.cpp  deep_object_detection_node.cpp  generic_postprocessor.cpp  image_preprocessor.cpp  inference_factory.cpp  main.cpp  object_detection_node.cpp  onnx_inference.cpp  ort_backend_inference.cpp  tensorrt_inference.cpp
deep_object_detection/test/: test_deep_object_detection_node.cpp
deep_object_detection/test/launch_tests/: test_deep_object_detection_cpu_backend.py  test_deep_object_detection_gpu_backend.py  test_deep_object_detection_tensorrt_backend.py
deep_ort_backend_plugin/: CMakeLists.txt  README.md  package.xml  plugins.xml
deep_ort_backend_plugin/include/deep_ort_backend_plugin/: ort_backend_executor.hpp  ort_backend_plugin.hpp  ort_cpu_memory_allocator.hpp
deep_ort_backend_plugin/src/: ort_backend_executor.cpp  ort_backend_plugin.cpp  ort_cpu_memory_allocator.cpp
deep_ort_backend_plugin/test/: test_ort_backend.cpp
deep_ort_gpu_backend_plugin/: CMakeLists.txt  README.md  package.xml  plugins.xml
deep_ort_gpu_backend_plugin/include/deep_ort_gpu_backend_plugin/: ort_gpu_backend_executor.hpp  ort_gpu_backend_plugin.hpp  ort_gpu_memory_allocator.hpp
deep_ort_gpu_backend_plugin/src/: ort_gpu_backend_executor.cpp  ort_gpu_backend_plugin.cpp  ort_gpu_memory_allocator.cpp
deep_ort_gpu_backend_plugin/test/: test_ort_gpu_backend.cpp
deep_sample/: CMakeLists.txt  README.md  USAGE.md  package.xml
deep_sample/config/: sample_config.yaml  sample_node_config.yaml  sample_node_gpu_config.yaml  sample_node_tensorrt_config.yaml
deep_sample/include/deep_sample/: sample_inference_node.hpp
deep_sample/launch/: sample_inference.launch.py  sample_with_lifecycle.launch.py  sample_with_lifecycle.launch.yaml  sample_with_lifecycle_gpu.launch.yaml  sample_with_lifecycle_tensorrt.launch.yaml
deep_sample/models/: README.md  tiny_model.onnx
deep_sample/scripts/: create_dummy_model.py  create_simple_model.py
deep_sample/src/: sample_inference_node.cpp
deep_sample/test/: test_sample_node.cpp
deep_sample/test/launch_tests/: test_sample_cpu_backend.py  test_sample_gpu_backend.py  test_sample_tensorrt_backend.py
deep_tensor/: CMakeLists.txt  README.md  package.xml
deep_tensor/include/deep_tensor/: memory_allocator.hpp  ros_conversions.hpp  tensor.hpp
deep_tensor/src/: memory_allocator.cpp  ros_conversions.cpp  tensor.cpp
deep_tensor/test/: test_ros_conversions.cpp
deep_test/: CMakeLists.txt  DEVELOPING.md  README.md  deep_test-extras.cmake  package.xml
deep_test/cmake/: add_deep_test.cmake
deep_test/include/deep_test/: compat.hpp  deep_test.hpp
deep_test/include/test_fixtures/: mock_backend_fixture.hpp  test_executor_fixture.hpp
deep_test/include/test_nodes/: client_test_node.hpp  deep_test_node.hpp  publisher_test_node.hpp  service_test_node.hpp  subscriber_test_node.hpp
deep_test/src/: test_executor_fixture.cpp
deep_test/src/mock_plugin/: mock_plugin.cpp  plugins.xml
deep_test/test/: test_basic_example.cpp  test_integration.cpp  test_node_lifecycle.cpp  test_plugin_system.cpp  test_tensor.cpp  test_with_ros.cpp
deep_tools/camera_sync/: CMakeLists.txt  DEVELOPING.md  README.md  package.xml
deep_yolo_inference/: CMakeLists.txt  README.md  package.xml
deep_yolo_inference/config/: object_detection_params.yaml  yolo_inference.yaml  yolo_trt.yaml
deep_yolo_inference/launch/: yolo_inference.launch.py
deep_yolo_inference/src/: backend_manager.cpp  main.cpp  processing.cpp  yolo_inference_node.cpp
onnxruntime/: CMakeLists.txt  package.xml  plugins.xml
onnxruntime-gpu/: CMakeLists.txt  package.xml  plugins.xml
onnxruntime-gpu/src/: onnx_cuda_allocator.cpp  onnxruntime_gpu_plugin.cpp
onnxruntime/src/: onnx_cpu_allocator.cpp  onnxruntime_plugin.cpp
onnxruntime_gpu_vendor/: CMakeLists.txt  README.md  package.xml
onnxruntime_gpu_vendor/env_hook/: onnxruntime_library_path.sh.in
onnxruntime_vendor/: CMakeLists.txt  README.md  package.xml
(+53 files in other folders)
