<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>deep_conversions</name>
  <version>0.1.0</version>
  <description>Conversion utilities between ROS 2 sensor messages and tensors</description>
  <maintainer email="hello@watonomous.ca">WATonomous</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>deep_core</depend>

  <test_depend>deep_test</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
