<?xml version="1.0"?>
<package format="3">
  <name>deep_core</name>
  <version>0.1.0</version>
  <description>A set of core plugin interfaces, types, and base node classes for Deep ROS packages</description>
  <maintainer email="hello@watonomous.ca">WATonomous</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>pluginlib</depend>
  <depend>bondcpp</depend>

  <test_depend>deep_test</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
